Mi primer Master Commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 WLC
+App_ejecutar_CMD_linickx.com.py
+Captura.PNG
+EquiposDown.txt
+__pycache__
+comandos_WLC.txt
+config-menu_old.py
+modulo_old.py
+modulo_old2.py
